# KDTree

./: CMakeLists.txt  ComparePoint.h  DataParser.cpp  DataParser.h  KdTree.cpp  KdTree.h  Output.csv  Point.h  README.md  main.cpp
Performance/: Construction time.xlsx  KNNResult.csv
